# my-ai-news-aggregator

./: README.md  pyproject.toml
aggregator/: runner.py
aggregator/config/: sources.py
aggregator/fetchers/: openai_news.py  smol_ai.py  youtube.py
